--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* 기본 텍스트 스타일 */
 body {
   height: 100vh;
-  width: 100wh;
+  width: 100vw;
   background-color: black;
   color: white;
   text-align: center;
@@ -13,7 +13,10 @@ body {
 }
 
 h1 {
-  margin-top: 20px;
+  display: block;
+  font-size: 2em;
+  margin: 20px 0;
+  font-weight: bold;
 }
 
 .options {
@@ -39,8 +42,29 @@ h1 {
   border: 3px solid white;
   border-radius: 40px;
 }
+
+.photo-container {
+  display: grid;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+/* 2장 또는 3장일 때 가로 배열 */
+.photo-container.horizontal {
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+/* 4장일 때 2x2 배열 */
+.photo-container.grid {
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+}
+
 .photo-container img {
-  width: 300px;
+  width: 100%;
+  height: auto;
+  max-width: 300px;
   margin-bottom: 30px;
 }
 
