--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 h1 {
@@ -70,4 +68,62 @@ h1 {
 
 #countdown {
   font-size: 80px;
+}
+
+.sensor-bar__info {
+  font-size: 14px;
+  opacity: 0.5;
+}
+.screen-header {
+  padding: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 90px;
+}
+.photopi-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 100px;
+  font-weight: 800;
+  margin-bottom: 150px;
+}
+.photopi-title div:last-child {
+  padding: 10px;
+  background-color: #bc1142;
+  margin: 0px 450px;
+  border-radius: 100px;
+}
+.screen-header__row {
+  display: flex;
+  align-items: center;
+}
+#pi-logo {
+  width: 24px;
+}
+.screen-header__text {
+  margin-right: 20px;
+}
+.sensor-bar {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.sensor-bar__outer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.3);
+  width: 800px;
+  height: 30px;
+  border-radius: 15px;
+}
+.sensor-bar__inner {
+  border-radius: 10px;
+  background-color: #bc1142;
+  width: 785px;
+  height: 20px;
 }
