--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
   display: flex;
   flex-direction: column;
 }
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 h1 {
   display: block;
@@ -19,6 +24,8 @@ h1 {
 
 .options {
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 20px;
 }
 
@@ -37,7 +44,8 @@ h1 {
 
 .count-option.selected {
   opacity: 1; /* 선택된 항목 강조 */
-  border: 3px solid white;
+  border: 0px;
+  background-color: #bc1142;
   border-radius: 40px;
 }
 
@@ -81,7 +89,6 @@ h1 {
   align-items: center;
   font-size: 18px;
   font-weight: 700;
-  margin-bottom: 90px;
 }
 .photopi-title {
   display: flex;
