--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 }
 main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -27,6 +28,7 @@ h1 {
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+  width: 100%;
 }
 
 .count-option {
@@ -49,29 +51,9 @@ h1 {
   border-radius: 40px;
 }
 
-.photo-container {
-  display: grid;
-  gap: 10px;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-/* 2장 또는 3장일 때 가로 배열 */
-.photo-container.horizontal {
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-}
-
-/* 4장일 때 2x2 배열 */
-.photo-container.grid {
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: auto;
-}
-
 .photo-container img {
-  width: 100%;
-  height: auto;
   max-width: 300px;
-  margin-bottom: 30px;
+  padding: 0px 5px;
 }
 
 #countdown {
