--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* 기본 텍스트 스타일 */
 body {
   height: 100vh;
   width: 100vw;
@@ -134,4 +133,22 @@ h1 {
   background-color: #bc1142;
   width: 785px;
   height: 20px;
+}
+
+.canvas__row {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+canvas {
+    width: 500px;
+    height: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
