--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ h1 {
   height: 20px;
 }
 
-.canvas__row {
+.chart__row {
     background-color: rgba(255, 255, 255, 0.1);
     padding: 20px;
     border-radius: 10px;
@@ -151,4 +151,16 @@ canvas {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.chart__title {
+  opacity: 0.5;
+  background-color: white;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  width: 1200px;
+  padding: 10px 30px;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
