--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h1 {
 }
 
 .photo-container {
-  padding: 50px 0px;
+  padding: 120px 0px 20px 0px;
 }
 
 #countdown {
@@ -103,6 +103,7 @@ h1 {
   font-size: 100px;
   font-weight: 800;
   margin-bottom: 150px;
+  margin-top: 70px;
 }
 .photopi-title div:last-child {
   padding: 10px;
@@ -119,6 +120,7 @@ h1 {
 .screen-header__text {
   margin-right: 20px;
 }
+
 .sensor-bar {
   display: flex;
   justify-content: center;
@@ -144,7 +146,6 @@ h1 {
   transition: width 0.5s ease; /* 부드러운 애니메이션 */
 }
 
-
 .chart__row {
     background-color: rgba(255, 255, 255, 0.1);
     padding: 20px;
@@ -153,6 +154,7 @@ h1 {
     align-items: center;
     justify-content: center;
     gap: 20px;
+    margin-bottom: 40px;
 }
 
 canvas {
@@ -169,19 +171,19 @@ canvas {
   color: black;
   font-size: 18px;
   font-weight: bold;
-  width: 1200px;
+  width: 1000px;
   padding: 10px 30px;
   border-radius: 10px;
   margin-bottom: 20px;
 }
 
 #pi-logo__end{
-  width: 150px;
+  width: 250px;
   margin-top: 70px;
 }
 
 .message__end {
   font-weight: bold;
   font-size: 40px;
-  margin-top: 70px;
+  margin-top: 120px;
 }
